Fix: issue with resource card margins when screen size too small

--- a/src/styles/isomer-cms/elements/variable.scss
+++ b/src/styles/isomer-cms/elements/variable.scss
@@ -29,4 +29,4 @@ $sites-container-width: ($site-width*3) + ($site-margin-horizontal*6);
 
 $resource-card-height: 240px;
 $resource-card-margin: 2.5%;
-$resource-card-width: (100% - ($resource-card-margin*2) )/3 ;
+$resource-card-width: (100% - ($resource-card-margin*3) )/3 ;
